# split_bot

./: pyproject.toml
split_bot/: __init__.py
