[tool.poetry]
name = "split-bot"
version = "0.1.0"
description = ""
authors = ["pzverkov <pzverkov@gpmdata.ru>"]
readme = "README.md"
packages = [{include = "split_bot"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
