[tool.poetry]
name = "split-bot"
version = "0.1.0"
description = ""
authors = ["pzverkov <pzverkov@gpmdata.ru>"]
readme = "README.md"
packages = [{include = "split_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
telebot = "^0.0.5"
aiogram = "2.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
